# CodeVideoRenderer

./: .gitignore  LICENSE  README.md  __init__.py  index.html  pyproject.toml
CodeVideoRenderer/: CameraFollowCursorCVR.py  __init__.py  config.py  renderer.py  typing.py  utils.py
CodeVideoRenderer/renderer/: CameraFollowCursorCVR.py  config.py  functions.py
docs/: 01.html  CNAME  docs.html  furo.css  index.html  script.js  search.html  style.css
docs/source/: camera_algorithm.rst  camerafollowcursorcv.rst  changelog.rst  classes.rst  conf.py  constants.rst  index.rst  input_sources.rst  install.rst  license.rst  quickstart.rst
