[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["CodeVideoRenderer*"]

[tool.setuptools]
license-files = []

[project]
name = "codevideorenderer"
version = "1.1.2"
description = "A Python library for rendering code videos"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Zhu Chongjing", email = "zhuchongjing_pypi@163.com"},
]
dependencies = [
    "manim>=0.19.1",
    "rich>=13.0.0",
    "numpy",
    "proglog",
    "moviepy",
    "pillow",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZhuChongjing/CodeVideoRenderer"